<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lovelace Turing</string>
    <string name="action_settings">Settings</string>
    <string name="ada_heading">Ada Lovelace</string>
    <string name="ada1_desc">Watercolor portrait of Ada King, Countess of Lovelace (Ada Lovelace)</string>
    <string name="ada2_desc">Ada Byron at age four, from a miniature in a locket sent to Lord Byron by his sister.</string>
    <string name="ada3_desc">Ada Byron at age seventeen (1832)</string>
    <string name="ada_text1">Augusta Ada King, Countess of Lovelace (10 December 1815 – 27 November 1852), born Augusta Ada Byron and now commonly known as Ada Lovelace, was an English mathematician and writer chiefly known for her work on Charles Babbage\'s early mechanical general-purpose computer, the Analytical Engine. Her notes on the engine include what is recognised as the first algorithm intended to be carried out by a machine. Because of this, she is often described as the world\'s first computer programmer.</string>
    <string name="ada_text2">Lovelace was born 10 December 1815 as the only legitimate child of the poet Lord Byron and his wife Anne Isabella Byron. All Byron\'s other children were born out of wedlock. Byron separated from his wife a month after Ada was born and left England forever four months later, eventually dying of disease in the Greek War of Independence when Ada was eight years old. Ada\'s mother remained bitter at Lord Byron and promoted Ada\'s interest in mathematics and logic in an effort to prevent her from developing what she saw as the insanity seen in her father, but Ada remained interested in him despite this (and was, upon her eventual death, buried next to him at her request).</string>
    <string name="ada_text3">Ada described her approach as \"poetical science\" and herself as an \"Analyst (Metaphysician)\". As a young adult, her mathematical talents led her to an ongoing working relationship and friendship with fellow British mathematician Charles Babbage, and in particular Babbage\'s work on the Analytical Engine. Between 1842 and 1843, she translated an article by Italian military engineer Luigi Menabrea on the engine, which she supplemented with an elaborate set of notes of her own, simply called Notes. These notes contain what many consider to be the first computer program—that is, an algorithm designed to be carried out by a machine. Lovelace\'s notes are important in the early history of computers. She also developed a vision on the capability of computers to go beyond mere calculating or number-crunching while others, including Babbage himself, focused only on those capabilities. Ada\'s mind-set of \"poetical science\" led her to ask basic questions about the Analytical Engine (as shown in her notes) examining how individuals and society relate to technology as a collaborative tool.</string>
    <string name="source">Source: Wikipedia</string>
    
    <string name="alan_heading">Alan Turing</string>
    <string name="alan1_desc">Alan Mathison Turing at the time of his election to a Fellowship of the Royal Society. Photograph was taken at the Elliott and Fry studio on 29 March 1951. There is another photograph taken at the same session where he is not looking directly at the camera.</string>
    <string name="alan2_desc">Allan Turing Statue, on display at Bletchley Park</string>
    <string name="alan3_desc">King\'s College Chapel (seen from the Backs)</string>
    <string name="alan_text1">Alan Mathison Turing, OBE, FRS (23 June 1912 – 7 June 1954) was a British mathematician, logician, cryptanalyst and computer scientist. He was highly influential in the development of computer science, giving a formalisation of the concepts of \"algorithm\" and \"computation\" with the Turing machine, which can be considered a model of a general purpose computer. Turing is widely considered to be the father of theoretical computer science and artificial intelligence.</string>
    <string name="alan_text2">During World War II, Turing worked for the Government Code and Cypher School (GC and CS) at Bletchley Park, Britain\'s codebreaking centre. For a time he led Hut 8, the section responsible for German naval cryptanalysis. He devised a number of techniques for breaking German ciphers, including improvements to the pre-war Polish bombe method, an electromechanical machine that could find settings for the Enigma machine.</string>
    <string name="alan_text3">Turing studied as an undergraduate from 1931 to 1934 at King\'s College, Cambridge, from where he gained first-class honours in mathematics. In 1935, at the young age of 22, he was elected a fellow at King\'s on the strength of a dissertation in which he proved the central limit theorem, despite the fact that he had failed to find out that it had already been proved in 1922 by Jarl Waldemar Lindeberg.</string>

</resources>
