<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ada_heading"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal">
    
    <RelativeLayout
        android:id="@+id/relativeView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        
    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/ada1_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ada1" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:text="@string/ada_text1"
        android:layout_marginTop="8dp"
        android:textSize="22sp"/>
    
    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/ada2_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/textView2"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ada2" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:text="@string/ada_text2"
        android:layout_marginTop="8dp"
        android:textSize="22sp"/>
    
    <ImageView
        android:id="@+id/imageView3"
        android:contentDescription="@string/ada3_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/textView3"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ada3" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:text="@string/ada_text3"
        android:layout_marginTop="8dp"
        android:textSize="22sp"/>
	
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:text="@string/source"
        android:layout_marginTop="8dp"
        android:textSize="12sp"/>
    
	</RelativeLayout>
	
    </ScrollView>
    
</RelativeLayout>